adicionado formulario de login

--- a/login.html
+++ b/login.html
@@ -10,5 +10,6 @@
     <h1>Página de login</h1>
     <p>Vendas = R$ 5000,00</p>
     <a href="index.html">Voltar para a pÃ¡gina home</a>
+<h2> faça login agora</h2>
 </body>
 </html>
